--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "format": "prettier --write ."
   },
   "prisma": {
-  "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@devimasolutions/auth": "^0.3.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -22,6 +23,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^6.1.3",
     "@mui/styles": "^6.1.3",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.20.0",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.8",
@@ -37,7 +39,6 @@
     "lucide-react": "^0.439.0",
     "nanoid": "^5.0.8",
     "next": "14.2.9",
-    "next-auth": "^4.24.7",
     "next-runtime-env": "^3.2.2",
     "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
