--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/styles": "^6.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.20.0",
+    "@react-email/components": "^0.0.31",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.8",
     "@types/pg": "^8.11.10",
@@ -49,6 +50,7 @@
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
+    "resend": "^4.0.1",
     "sequelize": "^6.37.3",
     "stripe": "^16.12.0",
     "tailwind-merge": "^2.5.2",
