--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@mui/styles": "^6.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.20.0",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-email/components": "^0.0.31",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.8",
